--- a/myapp/templates/content.html
+++ b/myapp/templates/content.html
@@ -24,7 +24,7 @@
         <link rel="icon" href="http://pkbqwpnpa.bkt.clouddn.com/image/favicon.ico">
     </head>
 
-    <body>
+    <body onload="index()">
         <input id="navi" type="checkbox">
         <ul class="main-navication">
             <li>
@@ -145,8 +145,8 @@
                         <br>
                         <span>
                             框架
-                            <a href="https://hexo.io/" target="_blank" style="text-decoration: none;">
-                                HEXO
+                            <a href="https://www.djangoproject.com/" target="_blank" style="text-decoration: none;">
+                                Django
                             </a>
                         </span>
                         <span>
@@ -166,12 +166,21 @@
                 </div>
             </div>
         </div>
-        <script>
-            var wrap = document.getElementById('wrap');
-            window.onload = function() {
-                wrap.className += ' done';
+{#        <script>#}
+{#            var wrap = document.getElementById('wrap');#}
+{#            window.onload = function() {#}
+{#                wrap.className += ' done';#}
+{#            }#}
+{#        </script>#}
+    </body>
+   {# JS代码开始 #}
+        {# log显示JS代码开始 #}
+        <script type="text/javascript">
+        function index() {
+                console.log('一稚杨的个人博客网站，部署于pythonanywhere');
             }
         </script>
-    </body>
+        {# log显示JS代码结束 #}
+    {# JS代码结束 #}
 
 </html>
