--- a/myapp/templates/content.html
+++ b/myapp/templates/content.html
@@ -85,7 +85,7 @@
             <div class="article-content" style="max-width:800px">
                 <h3>博客正文</h3>
                 <p>
-                    {{ blog.content }}
+                    {{ blog.content|safe }}
                 </p>
             </div>
             <div class="article-meta" style="max-width:800px">
