--- a/myapp/templates/index.html
+++ b/myapp/templates/index.html
@@ -82,7 +82,7 @@
             <ul class="pagination">
                 <li class="current">
                     {% if is_previous_page %}
-                        <a href ="" title="上一页" >
+                        <a href ="?page_num={{ now_page.previous_page_number }}" title="上一页" >
                     {% else %}
                         <a href ="javascript:volid(0);" title="没有上一页了">
                     {% endif %}
@@ -94,17 +94,17 @@
                     {# 判断当前是否是当前页，当前页高亮 #}
                     {% if num == now_page_num %}
                         <li class="current">
-                            <a href="" style="background-color: #337ab7">{{ num }}</a>
+                            <a href="?page_num={{ num }}" style="background-color: #337ab7">{{ num }}</a>
                         </li>
                     {% else %}
                         <li class="current">
-                            <a href="">{{ num }}</a>
+                            <a href="?page_num={{ num }}">{{ num }}</a>
                         </li>
                     {% endif %}
                 {% endfor %}
                     <li class="current">
                         {% if is_next_page %}
-                            <a href=""  title="下一页">
+                            <a href="?page_num={{ now_page.next_page_number }}"  title="下一页">
                         {% else %}
                             <a href ="javascript:volid(0);" title="没有下一页了">
                         {% endif %}
