--- a/myapp/templates/index.html
+++ b/myapp/templates/index.html
@@ -136,6 +136,12 @@
                                 </i>
                             </a>
                         </li>
+                        <li>
+                            <a href="http://pkbqwpnpa.bkt.clouddn.com/yzy.png" title="微信公众号" target="_blank">
+                                <i class="icon icon-wechat">
+                                </i>
+                            </a>
+                        </li>
                     </ul>
                 </div>
                 <div class="bottom">
